objects/DPT_Deposit_ARG__c.object
<CustomObject>
    <fields>
        <fullName>AccType_AR__c</fullName>
        <description>Type of bank account</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Bank Account</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>Rapipago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_AR__c</fullName>
        <description>Amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_AR__c</fullName>
        <description>Bank account</description>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccType_AR__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>017R</fullName>
                </value>
                <value>
                    <fullName>072</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_AR__c</fullName>
        <description>Bank branch</description>
        <label>Branch</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_AR__c</fullName>
        <description>Free text to add any comment</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_AR__c</fullName>
        <description>Deposit date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the deposit was created from a document</description>
        <label>From Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_AR_DepositRecordedJDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Deposit Recorded in JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecNumberInterfaceOk_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the Deposit has been recorded in JDE (by TXT file batch process)</description>
        <label>Receipt No. Interface OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceiptNo_AR__c</fullName>
        <description>Receipt number</description>
        <label>Receipt No.</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipName>Deposits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>LAT Deposit</label>
    <nameField>
        <label>Bank Slip No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Deposits</pluralLabel>
    <recordTypes>
        <fullName>DPT_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DPT_VR01_NameLengthValidation_AR</fullName>
        <active>true</active>
        <description>&apos;Bank Slip No.&apos; length cannot be greater than 10.</description>
        <errorConditionFormula>NOT(ISBLANK(Name)) 
&amp;&amp; 
(NOT(ISNUMBER(Name))) || (LEN(Name) &gt; 10)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot enter a Bank Slip No. with more than 10 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DPT_VR02_AmountValidation_AR</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_AR__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Amount_AR__c</errorDisplayField>
        <errorMessage>You can not enter an amount less than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_DPT_VR03_AccTypeValidation_AR</fullName>
        <active>false</active>
        <description>verifies the profiles that can change the obtained value</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;DPT_Standard_AR&apos; &amp;&amp;
			 (
			(ISPICKVAL( ReceiptNo_AR__r.LAT_AR_DepositAccountType__c,&apos;C&apos;) &amp;&amp;
			  NOT(ISPICKVAL(AccType_AR__c, &apos;Bank Account&apos;)))
			 ||
			  (ISPICKVAL(ReceiptNo_AR__r.LAT_AR_DepositAccountType__c,&apos;R&apos;) &amp;&amp;
			  NOT(ISPICKVAL(AccType_AR__c, &apos;Collection Bank Account&apos;)))
			)</errorConditionFormula>
        <errorDisplayField>AccType_AR__c</errorDisplayField>
        <errorMessage>The following field can&apos;t be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_DPT_VR04_DocDeposit</fullName>
        <active>true</active>
        <description>The profile &apos;ventas&apos; cannot update a deposit created from a document.</description>
        <errorConditionFormula>OR($Profile.Name = &apos;AR_Vendedor&apos;, $Profile.Name = &apos;LAT_AR2_Vendedor&apos;) &amp;&amp; 
!ISNEW() &amp;&amp;
 From_Document__c = True</errorConditionFormula>
        <errorMessage>The profile &apos;AR_Vendedor&apos; cannot update a deposit created from a document.</errorMessage>
    </validationRules>
</CustomObject>